generated/MyParser.py
# Generated from MyParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyParser ( Parser ):

    grammarFileName = "MyParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'.+'", "'.-'", "'.*'", "'./'", "'''", 
                     "'='", "'+='", "'-='", "'*='", "'/='", "'<'", "'>'", 
                     "'=='", "'!='", "'<='", "'>='", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "':'", "','", "';'", "'if'", "'else'", 
                     "'for'", "'while'", "'break'", "'continue'", "'return'", 
                     "'eye'", "'zeros'", "'ones'", "'print'" ]

    symbolicNames = [ "<INVALID>", "WHITESPACE", "COMMENT", "PLUS", "MINUS", 
                      "MULTIPLY", "DIVIDE", "MAT_PLUS", "MAT_MINUS", "MAT_MULTIPLY", 
                      "MAT_DIVIDE", "MAT_TRANSPOSE_OP", "ASSIGN", "ASSIGN_PLUS", 
                      "ASSIGN_MINUS", "ASSIGN_MULTIPLY", "ASSIGN_DIVIDE", 
                      "LE", "GE", "EQ", "NE", "LEQ", "GEQ", "OPEN_BRACKET_ROUND", 
                      "CLOSE_BRACKET_ROUND", "OPEN_BRACKET_SQUARE", "CLOSE_BRACKET_SQUARE", 
                      "OPEN_BRACKET_CURLY", "CLOSE_BRACKET_CURLY", "RANGE_OP", 
                      "COMMA", "SEMICOLON", "IF", "ELSE", "FOR", "WHILE", 
                      "BREAK", "CONTINUE", "RETURN", "EYE", "ZEROS", "ONES", 
                      "PRINT", "ID", "INT", "FLOAT", "STRING" ]

    RULE_program = 0
    RULE_codeBlock = 1
    RULE_ifThenElse = 2
    RULE_if = 3
    RULE_then = 4
    RULE_else = 5
    RULE_forLoop = 6
    RULE_range = 7
    RULE_whileLoop = 8
    RULE_comparison = 9
    RULE_assignment = 10
    RULE_print = 11
    RULE_return = 12
    RULE_expression = 13
    RULE_specialMatrixFunction = 14
    RULE_break = 15
    RULE_continue = 16
    RULE_vector = 17
    RULE_elementReference = 18
    RULE_id = 19
    RULE_int = 20
    RULE_float = 21
    RULE_string = 22

    ruleNames =  [ "program", "codeBlock", "ifThenElse", "if", "then", "else", 
                   "forLoop", "range", "whileLoop", "comparison", "assignment", 
                   "print", "return", "expression", "specialMatrixFunction", 
                   "break", "continue", "vector", "elementReference", "id", 
                   "int", "float", "string" ]

    EOF = Token.EOF
    WHITESPACE=1
    COMMENT=2
    PLUS=3
    MINUS=4
    MULTIPLY=5
    DIVIDE=6
    MAT_PLUS=7
    MAT_MINUS=8
    MAT_MULTIPLY=9
    MAT_DIVIDE=10
    MAT_TRANSPOSE_OP=11
    ASSIGN=12
    ASSIGN_PLUS=13
    ASSIGN_MINUS=14
    ASSIGN_MULTIPLY=15
    ASSIGN_DIVIDE=16
    LE=17
    GE=18
    EQ=19
    NE=20
    LEQ=21
    GEQ=22
    OPEN_BRACKET_ROUND=23
    CLOSE_BRACKET_ROUND=24
    OPEN_BRACKET_SQUARE=25
    CLOSE_BRACKET_SQUARE=26
    OPEN_BRACKET_CURLY=27
    CLOSE_BRACKET_CURLY=28
    RANGE_OP=29
    COMMA=30
    SEMICOLON=31
    IF=32
    ELSE=33
    FOR=34
    WHILE=35
    BREAK=36
    CONTINUE=37
    RETURN=38
    EYE=39
    ZEROS=40
    ONES=41
    PRINT=42
    ID=43
    INT=44
    FLOAT=45
    STRING=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MyParser.EOF, 0)

        def codeBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.CodeBlockContext)
            else:
                return self.getTypedRuleContext(MyParser.CodeBlockContext,i)


        def getRuleIndex(self):
            return MyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13731144663040) != 0):
                self.state = 46
                self.codeBlock()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(MyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACKET_CURLY(self):
            return self.getToken(MyParser.OPEN_BRACKET_CURLY, 0)

        def CLOSE_BRACKET_CURLY(self):
            return self.getToken(MyParser.CLOSE_BRACKET_CURLY, 0)

        def codeBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.CodeBlockContext)
            else:
                return self.getTypedRuleContext(MyParser.CodeBlockContext,i)


        def ifThenElse(self):
            return self.getTypedRuleContext(MyParser.IfThenElseContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(MyParser.ForLoopContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(MyParser.WhileLoopContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MyParser.AssignmentContext,0)


        def print_(self):
            return self.getTypedRuleContext(MyParser.PrintContext,0)


        def return_(self):
            return self.getTypedRuleContext(MyParser.ReturnContext,0)


        def break_(self):
            return self.getTypedRuleContext(MyParser.BreakContext,0)


        def continue_(self):
            return self.getTypedRuleContext(MyParser.ContinueContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_codeBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeBlock" ):
                listener.enterCodeBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeBlock" ):
                listener.exitCodeBlock(self)




    def codeBlock(self):

        localctx = MyParser.CodeBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_codeBlock)
        self._la = 0 # Token type
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.match(MyParser.OPEN_BRACKET_CURLY)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13731144663040) != 0):
                    self.state = 55
                    self.codeBlock()
                    self.state = 60
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 61
                self.match(MyParser.CLOSE_BRACKET_CURLY)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.ifThenElse()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.forLoop()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                self.whileLoop()
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 5)
                self.state = 65
                self.assignment()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 6)
                self.state = 66
                self.print_()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 7)
                self.state = 67
                self.return_()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 8)
                self.state = 68
                self.break_()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 9)
                self.state = 69
                self.continue_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfThenElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_(self):
            return self.getTypedRuleContext(MyParser.IfContext,0)


        def then(self):
            return self.getTypedRuleContext(MyParser.ThenContext,0)


        def else_(self):
            return self.getTypedRuleContext(MyParser.ElseContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_ifThenElse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfThenElse" ):
                listener.enterIfThenElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfThenElse" ):
                listener.exitIfThenElse(self)




    def ifThenElse(self):

        localctx = MyParser.IfThenElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ifThenElse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.if_()
            self.state = 73
            self.then()
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 74
                self.else_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MyParser.IF, 0)

        def OPEN_BRACKET_ROUND(self):
            return self.getToken(MyParser.OPEN_BRACKET_ROUND, 0)

        def comparison(self):
            return self.getTypedRuleContext(MyParser.ComparisonContext,0)


        def CLOSE_BRACKET_ROUND(self):
            return self.getToken(MyParser.CLOSE_BRACKET_ROUND, 0)

        def getRuleIndex(self):
            return MyParser.RULE_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)




    def if_(self):

        localctx = MyParser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(MyParser.IF)
            self.state = 78
            self.match(MyParser.OPEN_BRACKET_ROUND)
            self.state = 79
            self.comparison()
            self.state = 80
            self.match(MyParser.CLOSE_BRACKET_ROUND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def codeBlock(self):
            return self.getTypedRuleContext(MyParser.CodeBlockContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_then

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThen" ):
                listener.enterThen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThen" ):
                listener.exitThen(self)




    def then(self):

        localctx = MyParser.ThenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_then)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.codeBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(MyParser.ELSE, 0)

        def codeBlock(self):
            return self.getTypedRuleContext(MyParser.CodeBlockContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_else

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse" ):
                listener.enterElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse" ):
                listener.exitElse(self)




    def else_(self):

        localctx = MyParser.ElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_else)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MyParser.ELSE)
            self.state = 85
            self.codeBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MyParser.FOR, 0)

        def id_(self):
            return self.getTypedRuleContext(MyParser.IdContext,0)


        def ASSIGN(self):
            return self.getToken(MyParser.ASSIGN, 0)

        def range_(self):
            return self.getTypedRuleContext(MyParser.RangeContext,0)


        def codeBlock(self):
            return self.getTypedRuleContext(MyParser.CodeBlockContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)




    def forLoop(self):

        localctx = MyParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(MyParser.FOR)
            self.state = 88
            self.id_()
            self.state = 89
            self.match(MyParser.ASSIGN)
            self.state = 90
            self.range_()
            self.state = 91
            self.codeBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MyParser.ExpressionContext,i)


        def RANGE_OP(self):
            return self.getToken(MyParser.RANGE_OP, 0)

        def getRuleIndex(self):
            return MyParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)




    def range_(self):

        localctx = MyParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_range)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.expression(0)
            self.state = 94
            self.match(MyParser.RANGE_OP)
            self.state = 95
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MyParser.WHILE, 0)

        def OPEN_BRACKET_ROUND(self):
            return self.getToken(MyParser.OPEN_BRACKET_ROUND, 0)

        def comparison(self):
            return self.getTypedRuleContext(MyParser.ComparisonContext,0)


        def CLOSE_BRACKET_ROUND(self):
            return self.getToken(MyParser.CLOSE_BRACKET_ROUND, 0)

        def codeBlock(self):
            return self.getTypedRuleContext(MyParser.CodeBlockContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_whileLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)




    def whileLoop(self):

        localctx = MyParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(MyParser.WHILE)
            self.state = 98
            self.match(MyParser.OPEN_BRACKET_ROUND)
            self.state = 99
            self.comparison()
            self.state = 100
            self.match(MyParser.CLOSE_BRACKET_ROUND)
            self.state = 101
            self.codeBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MyParser.ExpressionContext,i)


        def LE(self):
            return self.getToken(MyParser.LE, 0)

        def GE(self):
            return self.getToken(MyParser.GE, 0)

        def EQ(self):
            return self.getToken(MyParser.EQ, 0)

        def NE(self):
            return self.getToken(MyParser.NE, 0)

        def LEQ(self):
            return self.getToken(MyParser.LEQ, 0)

        def GEQ(self):
            return self.getToken(MyParser.GEQ, 0)

        def getRuleIndex(self):
            return MyParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)




    def comparison(self):

        localctx = MyParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.expression(0)
            self.state = 104
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8257536) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 105
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MyParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(MyParser.SEMICOLON, 0)

        def ASSIGN(self):
            return self.getToken(MyParser.ASSIGN, 0)

        def ASSIGN_PLUS(self):
            return self.getToken(MyParser.ASSIGN_PLUS, 0)

        def ASSIGN_MINUS(self):
            return self.getToken(MyParser.ASSIGN_MINUS, 0)

        def ASSIGN_MULTIPLY(self):
            return self.getToken(MyParser.ASSIGN_MULTIPLY, 0)

        def ASSIGN_DIVIDE(self):
            return self.getToken(MyParser.ASSIGN_DIVIDE, 0)

        def id_(self):
            return self.getTypedRuleContext(MyParser.IdContext,0)


        def elementReference(self):
            return self.getTypedRuleContext(MyParser.ElementReferenceContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = MyParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 107
                self.id_()
                pass

            elif la_ == 2:
                self.state = 108
                self.elementReference()
                pass


            self.state = 111
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 126976) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 112
            self.expression(0)
            self.state = 113
            self.match(MyParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(MyParser.PRINT, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MyParser.ExpressionContext,i)


        def SEMICOLON(self):
            return self.getToken(MyParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.COMMA)
            else:
                return self.getToken(MyParser.COMMA, i)

        def getRuleIndex(self):
            return MyParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)




    def print_(self):

        localctx = MyParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_print)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(MyParser.PRINT)
            self.state = 116
            self.expression(0)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 117
                self.match(MyParser.COMMA)
                self.state = 118
                self.expression(0)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(MyParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(MyParser.RETURN, 0)

        def SEMICOLON(self):
            return self.getToken(MyParser.SEMICOLON, 0)

        def expression(self):
            return self.getTypedRuleContext(MyParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)




    def return_(self):

        localctx = MyParser.ReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_return)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(MyParser.RETURN)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 135789727973392) != 0):
                self.state = 127
                self.expression(0)


            self.state = 130
            self.match(MyParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BinaryExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MyParser.ExpressionContext,i)

        def MULTIPLY(self):
            return self.getToken(MyParser.MULTIPLY, 0)
        def DIVIDE(self):
            return self.getToken(MyParser.DIVIDE, 0)
        def MAT_MULTIPLY(self):
            return self.getToken(MyParser.MAT_MULTIPLY, 0)
        def MAT_DIVIDE(self):
            return self.getToken(MyParser.MAT_DIVIDE, 0)
        def PLUS(self):
            return self.getToken(MyParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(MyParser.MINUS, 0)
        def MAT_PLUS(self):
            return self.getToken(MyParser.MAT_PLUS, 0)
        def MAT_MINUS(self):
            return self.getToken(MyParser.MAT_MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryExpression" ):
                listener.enterBinaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryExpression" ):
                listener.exitBinaryExpression(self)


    class ParenthesesExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_BRACKET_ROUND(self):
            return self.getToken(MyParser.OPEN_BRACKET_ROUND, 0)
        def expression(self):
            return self.getTypedRuleContext(MyParser.ExpressionContext,0)

        def CLOSE_BRACKET_ROUND(self):
            return self.getToken(MyParser.CLOSE_BRACKET_ROUND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesesExpression" ):
                listener.enterParenthesesExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesesExpression" ):
                listener.exitParenthesesExpression(self)


    class TransposeExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MyParser.ExpressionContext,0)

        def MAT_TRANSPOSE_OP(self):
            return self.getToken(MyParser.MAT_TRANSPOSE_OP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransposeExpression" ):
                listener.enterTransposeExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransposeExpression" ):
                listener.exitTransposeExpression(self)


    class MinusExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)
